# ukkonen

./: CMakeLists.txt  README.md  build.sh  script.sh
src/: main.c  suffix.c  suffix.h
